WeatherViewController added fillDataSoarce

--- a/WeatherForecast/WeatherForecast/Storyboard/Base.lproj/Main.storyboard
+++ b/WeatherForecast/WeatherForecast/Storyboard/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 <segment title="16 days"/>
                             </segments>
                             <connections>
-                                <action selector="daysSegmentControlValueChanged:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ijz-1k-x89"/>
+                                <action selector="daysSegmentControlValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Ax-9q-tPq"/>
                             </connections>
                         </segmentedControl>
                     </navigationItem>
