--- a/WeatherForecast/WeatherForecast/VIews/CollectionView/WeatherCollectionViewCell/WeatherCollectionViewCell.xib
+++ b/WeatherForecast/WeatherForecast/VIews/CollectionView/WeatherCollectionViewCell/WeatherCollectionViewCell.xib
@@ -13,15 +13,96 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="WeatherCollectionViewCell" customModule="WeatherForecast" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="236" height="171"/>
+            <rect key="frame" x="0.0" y="0.0" width="304" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="236" height="171"/>
+                <rect key="frame" x="0.0" y="0.0" width="304" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="piz-Km-Hek">
+                        <rect key="frame" x="8" y="8" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="J1Z-cV-Eyo"/>
+                            <constraint firstAttribute="height" constant="40" id="qFq-Dh-n69"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01.01.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJx-We-5fT">
+                        <rect key="frame" x="56" y="18.5" width="240" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qpA-bB-Yue">
+                        <rect key="frame" x="16" y="56" width="272" height="36"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="255" translatesAutoresizingMaskIntoConstraints="NO" id="gGZ-zR-uGF">
+                                <rect key="frame" x="0.0" y="0.0" width="272" height="16"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEB-B0-Ogl">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="FVl-2e-8V3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8W-TK-XIA">
+                                        <rect key="frame" x="60" y="0.0" width="212" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OMd-M5-gf2">
+                                <rect key="frame" x="0.0" y="16" width="272" height="20"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Night" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqy-pc-sle">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="gSo-Vi-akO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c29-ZB-0d2">
+                                        <rect key="frame" x="60" y="0.0" width="212" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="gGZ-zR-uGF" secondAttribute="bottom" constant="20" symbolic="YES" id="zkz-QN-DvS"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="uJx-We-5fT" secondAttribute="trailing" constant="8" id="2m9-Vb-ihF"/>
+                <constraint firstItem="uJx-We-5fT" firstAttribute="centerY" secondItem="piz-Km-Hek" secondAttribute="centerY" id="A4u-fN-8Lv"/>
+                <constraint firstItem="qpA-bB-Yue" firstAttribute="top" secondItem="piz-Km-Hek" secondAttribute="bottom" constant="8" id="L73-47-D6D"/>
+                <constraint firstAttribute="bottom" secondItem="qpA-bB-Yue" secondAttribute="bottom" constant="8" id="UD2-ow-Id9"/>
+                <constraint firstItem="uJx-We-5fT" firstAttribute="leading" secondItem="piz-Km-Hek" secondAttribute="trailing" constant="8" id="Yi0-y6-BmF"/>
+                <constraint firstItem="piz-Km-Hek" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="rrH-kd-kw5"/>
+                <constraint firstItem="qpA-bB-Yue" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="uQI-RD-G3S"/>
+                <constraint firstAttribute="trailing" secondItem="qpA-bB-Yue" secondAttribute="trailing" constant="16" id="yCH-oE-Ihf"/>
+                <constraint firstItem="piz-Km-Hek" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="z0f-wU-5R7"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="236" height="171"/>
-            <point key="canvasLocation" x="127" y="114.5"/>
+            <size key="customSize" width="304" height="157"/>
+            <connections>
+                <outlet property="tempDayLabel" destination="F8W-TK-XIA" id="4GJ-eF-3Hv"/>
+                <outlet property="tempNightLabel" destination="c29-ZB-0d2" id="4hZ-wG-LGG"/>
+                <outlet property="weatherDateLabel" destination="uJx-We-5fT" id="B1T-zv-4zc"/>
+                <outlet property="weatherIcon" destination="piz-Km-Hek" id="4D6-jP-NIU"/>
+            </connections>
+            <point key="canvasLocation" x="-56" y="24"/>
         </collectionViewCell>
     </objects>
 </document>
